<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_sign_in">Log-in or registered</string>
    <string name="action_sign_in_short">Login</string>
    <string name="add">Add</string>
    <string name="add_data">Add Data</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Zapero</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appupdater_btn_disable">Don\'t show again</string>
    <string name="appupdater_btn_dismiss">Dismiss</string>
    <string name="appupdater_btn_update">Update</string>
    <string name="appupdater_channel">appupdater_channel_01</string>
    <string name="appupdater_channel_name">Update notifications</string>
    <string name="appupdater_update_available">New update available!</string>
    <string name="appupdater_update_available_description_dialog">Update %1$s is available to download. By downloading the latest update you will get the latest features, improvements and bug fixes for %2$s.</string>
    <string name="appupdater_update_available_description_dialog_before_release_notes">Update %1$s is available to download.\n\nYou can get these new features:\n%2$s</string>
    <string name="appupdater_update_available_description_notification">Update %1$s of %2$s is available to download</string>
    <string name="appupdater_update_available_description_snackbar">Update %1$s is available!</string>
    <string name="appupdater_update_not_available">No updates available</string>
    <string name="appupdater_update_not_available_description">You\'ve got the latest version available of %s!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_loading">加载中...</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">b92f956051314b12b5faaf4d5242ce21</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="debug_is_detected">%s cannot run in debug mode</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="define_appupdater" />
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="env_is_detected">%s cannot run because the env had been hooked</string>
    <string name="env_is_detected1">%s cannot run because has Xposed</string>
    <string name="env_is_detected2">%s cannot run because developer env is open</string>
    <string name="env_is_detected3">%s cannot run because clone env</string>
    <string name="env_is_detected4">%s cannot run because frida detected</string>
    <string name="env_is_emulator">%s cannot run in the simulator environment</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="expand_button_title">Advanced</string>
    <string name="explain_accessibility_permission">The software needs to open \"Accessibility Services\" to run, please open \"Settings-&gt;Accessibility Services\" or \"Settings-&gt;Accessibility Services-&gt;More Downloaded Services\", find \" %s \", and enable Accessibility Services</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="gcm_defaultSenderId">367861478343</string>
    <string name="google_api_key">AIzaSyD4Ww0gPcPJYuEqib7UsBmZs7kIfIgmyQU</string>
    <string name="google_app_id">1:367861478343:android:cbfc8ad5e9bf7be7411fe2</string>
    <string name="google_crash_reporting_api_key">AIzaSyD4Ww0gPcPJYuEqib7UsBmZs7kIfIgmyQU</string>
    <string name="google_storage_bucket">zapero-a112f.firebasestorage.app</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="invalid_password">Password must be greater than 5 characters</string>
    <string name="invalid_username">Is not a valid username</string>
    <string name="item_view_role_description">Tab</string>
    <string name="name">Name:</string>
    <string name="notice_txt">Warning</string>
    <string name="text_app_list1">Welcome Host! please select the advertising task you want to perform</string>
    <string name="text_app_list2">Select All</string>
    <string name="text_app_list3">Start Task</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_get_task">Get it now</string>
    <string name="text_new_task_warn">Novice tasks must be completed on the same day after receiving them</string>
    <string name="text_next">Next</string>
    <string name="text_notice_hold">After the mission starts,please do not operate your phone</string>
    <string name="text_notice_hold2">otherwise the mission will fail!!</string>
    <string name="text_pre_run_content2">After starting the task, please try not to operate the phone to avoid task interruption or failure.</string>
    <string name="text_pre_run_content4">Execute now</string>
    <string name="text_pre_run_title">Execution Notes</string>
    <string name="url">Url:</string>
</resources>