<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/shape_bg3"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_txt"
        android:lineSpacingMultiplier="1.5"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginHorizontal="16dp"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_notice_hold"
        android:lineSpacingMultiplier="1.5"
        android:fontFamily="@font/gilroy_medium"
        android:layout_marginHorizontal="16dp"/>
    <TextView
        android:textSize="20sp"
        android:textColor="#cd3535"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_notice_hold2"
        android:lineSpacingMultiplier="1.5"
        android:fontFamily="@font/gilroy_bold"
        android:paddingHorizontal="16dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <TextView
            android:textSize="18sp"
            android:textColor="#999999"
            android:id="@+id/count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:layout_centerInParent="true"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_next"
            android:background="@drawable/btn_bg"
            android:visibility="invisible"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/text_next"
            android:fontFamily="@font/gilroy_regular"/>
    </RelativeLayout>
</LinearLayout>
