<?xml version="1.0" encoding="utf-8"?>
<com.hjq.shape.layout.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:shape_radius="10dp"
    app:shape_solidColor="@color/white">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:textAllCaps="false"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp">
        <TextView
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textAllCaps="false"/>
        <com.hjq.shape.view.ShapeEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            app:shape_radius="5dp"
            app:shape_strokeColor="@color/colorPrimary"
            app:shape_strokeSize="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp">
        <TextView
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/url"
            android:textAllCaps="false"/>
        <com.hjq.shape.view.ShapeEditText
            android:id="@+id/ed_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            app:shape_radius="5dp"
            app:shape_strokeColor="@color/colorPrimary"
            app:shape_strokeSize="1dp"/>
    </LinearLayout>
    <com.hjq.shape.view.ShapeButton
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/action_add_data"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textAllCaps="false"
        app:shape_radius="8dp"
        app:shape_solidColor="@color/colorPrimary"/>
</com.hjq.shape.layout.ShapeLinearLayout>
