<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/shape_bg3"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lineSpacingMultiplier="1.3"
        android:fontFamily="@font/gilroy_regular"
        android:layout_marginHorizontal="16dp"/>
    <TextView
        android:textSize="18sp"
        android:textColor="#cd3535"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_new_task_warn"
        android:lineSpacingMultiplier="1.5"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginHorizontal="22.5dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <Button
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_cancel"
            android:background="@drawable/btn_bg2"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/text_cancel"
            android:fontFamily="@font/gilroy_medium"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_access"
            android:background="@drawable/btn_bg"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:text="@string/text_get_task"
            android:fontFamily="@font/gilroy_medium"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
</LinearLayout>
