<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="#f8f9fb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/layout_execute_bg"
        android:paddingTop="?attr/actionBarSize"
        android:paddingBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="15sp"
            android:textColor="#152e4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pre_run_title"
            android:fontFamily="@font/gilroy_bold"/>
        <TextView
            android:textSize="12sp"
            android:textColor="#152e4a"
            android:gravity="center"
            android:id="@+id/tv_execute_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/gilroy_regular"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">
            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/warning_round_sharp"/>
            <TextView
                android:textSize="12sp"
                android:textColor="#da6e19"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pre_run_content2"
                android:fontFamily="@font/gilroy_regular"
                android:layout_marginStart="3dp"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:orientation="vertical"
        android:id="@+id/recycler_task_details"
        android:paddingTop="34.5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="22.5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="34dp"
        android:paddingHorizontal="22.5dp">
        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:id="@+id/tv_cancel"
            android:background="@drawable/shape_bg1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_cancel"
            android:fontFamily="@font/gilroy_medium"
            android:paddingHorizontal="19dp"/>
        <TextView
            android:textSize="17sp"
            android:gravity="center"
            android:id="@+id/tv_execute_task"
            android:background="@drawable/shape_bg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_pre_run_content4"
            android:fontFamily="@font/gilroy_medium"
            android:layout_marginStart="7.5dp"
            android:textFontWeight="700"/>
    </LinearLayout>
</LinearLayout>
