<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@mipmap/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/iv_close"
            android:padding="21dp"
            android:clickable="true"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:src="@mipmap/close"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AI Assistant"
            android:layout_centerInParent="true"
            style="@style/TextAppearance.AppCompat.Title"/>
    </RelativeLayout>
    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/iv_top_bot"
        android:layout_width="98dp"
        android:layout_height="106dp"
        android:layout_marginTop="18dp"/>
    <com.stardust.auojs.plugin.widget.BubbleTextView
        android:textSize="15sp"
        android:textColor="#566576"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv1"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_app_list1"
        android:fontFamily="@font/gilroy_regular"
        android:layout_marginHorizontal="30dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:paddingBottom="40dp"
        android:fadingEdgeLength="100dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:requiresFadingEdge="vertical"
        android:layout_marginHorizontal="27dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/ll_select_all"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_select_all"
            android:clickable="false"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#334d6a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_app_list2"/>
    </LinearLayout>
    <Button
        android:enabled="false"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#152e4a"
        android:id="@+id/rl_start_task"
        android:background="@drawable/selector_task_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/text_app_list3"
        android:fontFamily="@font/gilroy_medium"
        android:layout_marginHorizontal="30dp"/>
</LinearLayout>
